--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ h1 {
 }
 
 .subtitle {
-    font-size: 1.2rem;
+    font-size: 5.0rem;
     font-style: italic;
     margin-bottom: 20px;
 }
@@ -87,12 +87,12 @@ strong {
 
 .carousel {
     position: relative;
-    width: 60%;
+    width: 100%;
     margin: 20px auto;
     overflow: hidden;
     text-align: center;
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 1500px;
+    max-height: 1500px;
 }
 
 .carousel-item {
@@ -104,7 +104,7 @@ strong {
 }
 
 .carousel img {
-    width: 60%;
+    width: auto;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
