--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header {
 .logo {
     width: auto;
     max-width: 2000px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 h1 {
@@ -45,25 +45,34 @@ h1 {
 }
 
 .subtitle {
-    font-size: 5.0rem;
+    font-size: 2.5rem;
     font-style: italic;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .social-icons {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    align-items: center;
+    gap: 50px;
     margin: 15px 0;
+    margin-bottom: 50px;
 }
 
 .social-icons img {
-    width: 35px;
+    object-fit: fill;
     transition: transform 0.3s;
 }
 
 .social-icons img:hover {
     transform: scale(1.1);
+}
+
+hr {
+    border: none;
+    height: 2px;
+    background-color: #474747;
+    margin: 40px 0;
 }
 
 .content h2 {
@@ -77,8 +86,8 @@ ul {
 }
 
 li {
-    font-size: 1.1rem;
-    margin: 5px 0;
+    font-size: 1.0rem;
+    margin: 20px 0;
 }
 
 strong {
@@ -105,7 +114,8 @@ strong {
 
 .carousel img {
     width: auto;
-    height: auto;
+    height: 500px;
+    object-fit: contain;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
