--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,12 @@ hr {
 
 .content h2 {
     font-size: 1.5rem;
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
 ul {
     list-style: none;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 li {
@@ -94,6 +94,43 @@ li {
 
 strong {
     font-weight: bold;
+}
+
+.video-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.video-container {
+    max-width: 560px;
+    flex: 1;
+}
+
+.video-container iframe {
+    width: 50%;
+    height: 60%;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.text-container {
+    flex: 1;
+    text-align: right;
+}
+
+.text-container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.text-container li {
+    font-size: 1rem;
+    margin: 10px 0;
 }
 
 .carousel {
@@ -163,6 +200,26 @@ strong {
     .subtitle {
         width: 75%; /* Limit subtitle width to 75% */
         font-size: 1.25rem; /* Reduce font size for smaller screens */
+    }
+
+    .video-section {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .text-container {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .text-container ul {
+        padding: 0;
+    }
+
+    .video-container iframe {
+        width: 100%;
+        height: 200px;
     }
 
     .carousel img {
