--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h1 {
     font-size: 2.0rem;
     font-style: italic;
     margin-bottom: 50px;
-    width: 75%;
+    width: 60%;
     margin: 0 auto 50px;
 }
 
@@ -102,30 +102,35 @@ strong {
     justify-content: center;
     gap: 20px;
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 0px;
+}
+
+.text-container, .video-container {
+    flex: 0 0 50%;
+    max-width: 50vw;
 }
 
 .video-container {
-    max-width: 560px;
-    flex: 1;
+    text-align: left;
+    padding-left: 2rem;
 }
 
 .video-container iframe {
-    width: 50%;
+    width: 60%;
     height: 60%;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .text-container {
-    flex: 1;
     text-align: right;
+    padding-right: 2rem;
 }
 
 .text-container ul {
     list-style: none;
-    margin: 0;
     padding: 0;
+    margin-bottom: 0px;
 }
 
 .text-container li {
@@ -206,7 +211,7 @@ strong {
     }
 
     .subtitle {
-        width: 75%;
+        width: 70%;
         font-size: 1.25rem;
         margin-bottom: 30px;
     }
@@ -254,6 +259,7 @@ strong {
     }
 
     .demo-video {
+        max-width: 768px;
         width: 90%;
     }
 }
